src/test/ui/issues/issue-39404.stderr
error: missing fragment specifier
  --> $DIR/issue-39404.rs:1:19
   |
LL | macro_rules! m { ($i) => {} }
   |                   ^^

error: aborting due to previous error

