src/test/ui/issues/issue-39404.rs
#![allow(unused)]

macro_rules! m { ($i) => {} }
//~^ ERROR missing fragment specifier
//~| WARN previously accepted
//~| WARN hard error

fn main() {}
